--- a/eladmin-system/src/main/resources/config/application-dev.yml
+++ b/eladmin-system/src/main/resources/config/application-dev.yml
@@ -4,7 +4,7 @@ spring:
     druid:
       db-type: com.alibaba.druid.pool.DruidDataSource
       driverClassName: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-      url: jdbc:log4jdbc:mysql://101.133.129.9:3306/rzqh?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false
+      url: jdbc:log4jdbc:mysql://101.133.129.9:3306/rzqh_new?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false
       username: root
       password: root
 
@@ -39,7 +39,7 @@ spring:
   jpa:
     hibernate:
       # 生产环境设置成 none，避免程序运行时自动更新数据库结构
-      ddl-auto: update
+      ddl-auto: none
 
 #jwt
 jwt:
