--- a/eladmin-system/src/main/resources/config/application-dev.yml
+++ b/eladmin-system/src/main/resources/config/application-dev.yml
@@ -65,9 +65,8 @@ swagger:
   needToken: false
 
 # 文件存储路径
-file:
-  path: C:\eladmin\file\
-  avatar: C:\eladmin\avatar\
+rzqh:
+  fileRootPath: C:\eladmin\file\
   # 文件大小 /M
-  maxSize: 100
+  fileMaxSize: 100
   avatarMaxSize: 5
